--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-import": "^1.12.0",
     "less": "^3.10.2",
     "less-loader": "^5.0.0",
+    "vant": "^2.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "yus": "^1.0.6",
